# aries

./: .env.example  .gitignore  Makefile  README.md  debug_jwt.py  debug_routes.py  debug_stream.py  docker-compose.yml  init.sql  nx.json  package.json  project.json  test_debug_endpoint.py  test_stream_endpoint.py  test_uuid_validation.py  test_websocket.html  tsconfig.base.json
.github/workflows/: api.yml  ci-cd.yml  frontend.yml  processor.yml
.trae/documents/: Docs Overhaul and Project Structure Standard.md  Fix Stream Start API and Consumer Errors.md  Make Dashboard Dynamic and Add Video Upload Model Test.md  aries-edge-product-requirements.md  aries-edge-technical-architecture.md
docs/: APIReference.md  BackendConfiguration.md  ProjectStructure.md  Security.md  Troubleshooting.md
services/api/: Dockerfile  create_demo_data.py  debug_stream.py  project.json  requirements.txt  test_mock_stream.py  test_streaming.py
services/api/app/: main.py
services/api/app/core/: __init__.py  config.py  dependencies.py  security.py
services/frontend/: README.md  index.html  package.json  project.json  tailwind.config.js
services/frontend/src/: App.tsx  index.css  main.tsx
services/processor/: CMakeLists.txt  Dockerfile  main_processor.py  project.json  requirements.txt
services/processor/configs/: config_infer_primary.txt
services/processor/models/: labels.txt
services/processor/services/: __init__.py  config_service.py  pulsar_service.py
services/processor/src/: nvdsinfer_customparser_yolo.cpp
tooling/: README.md
tooling/nx/: README.md
(+39 files in other folders)
